Website/viz1.css
:root {
	--theme-color-light: rgb(220, 0, 0);
	--theme-color-dark: rgb(160, 0, 0);
 	--dark-background-color: rgb(50, 50, 50);
}

html {
  height: 100%;
}

a {
  color: white;
}

h1, h2, h3, h4, h5, h6
{
	color: var(--theme-color-dark);
}
h1 { font-size: 2rem; }
h2 { font-size: 1.75rem; }
h3 { font-size: 1.75rem; }
h4 { font-size: 1.25rem; }

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  background: #2a2c39;
}

body {
  margin: 0;
  background-color: #111;
  font-family: 'Poppins', sans-serif;
	font-size: 1.1em;
	font-weight: 300;
  padding: 0;
  height: 100%;
}

#mapholder {
   width: 100%;
   height: 100%;
   margin-left: 0px;
   position: relative;
   z-index:50;
}

#mapholder.hide {
  opacity: 0.2;
  transition-duration: 2s;
  transition-delay: 1s;
  z-index: 0;
  filter: blur(5px);
}
#mapholder.show {
  opacity: 1;
  transition-duration: 2s;
  transition-delay: 1s;
  z-index: 50;
  filter: none;
}

#countryInfo {
  position: absolute;
	height: 90%;
  left: 40%;
  top: 50%;
  transform: translate(-50%,-50%);
  background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
  opacity: 0;
  transition: 1s;
	border-radius: 10px;
}

#countryNameDisplay {
	font-size: 1.5em;
	position: relative;
	top: 5%;
  left: 50%;
  transform: translate(-5%,0);
}

#legend {
	padding: 10px;
	width: 20%;
	border-radius: 10px;
  position: absolute;
	right: 50px;
  top: 50%;
	transform: translate(0,-50%);
  background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
  opacity: 0;
  transition: 1s;
	z-index: 50;
	text-align: center;
}

#legend show p{
	font-size: 1.3em;
}

#legend.show {
	opacity: 1;
	transition-duration: 4s;
	transition-delay: 2s;
	z-index:50;
}

#legend.hide {
  opacity: 0;
  transition-duration: 2s;
  transition-delay: 500ms;
  z-index:0;
 }

@media all and (max-width: 800px) {
  #countryInfo { width: 40%; }
}
@media all and (max-width: 750px) {
  #countryInfo {
    width: 100%;
    position: static;
    background: none;
  }
#countryInfo.show p {
  color: #000 !important;
  margin-bottom: 2rem;
  }
}
#countryInfo.show {
  opacity: 1;
  transition-duration: 4s;
  transition-delay: 2s;
  z-index:50;
}
#countryInfo.hide {
  opacity: 0;
  transition-duration: 2s;
  transition-delay: 500ms;
  z-index:0;
 }
#countryInfo h1 {
  background: rgba(255,255,255,1);
  padding: .3rem;
  margin-top: -.5rem;
  text-align: center
  font-weight: 400;
}

#mapInstruction {
  position: absolute;
  border-radius: 25px;
  left: 50%;
  top: 10%;
  padding: 10px 10px;
  transform: translate(-50%,-50%);
  background: rgba(108,117,125,0.5); /* Color of the top background */
  opacity: 1;
  transition: 1s;
  z-index: 75;
}

#mapInstruction.hide {
  opacity: 0;
  z-index:0;
 }



img {
    width: 100%;
}

.map-btn {
  position: absolute;
  padding: 10px 10px;
  margin-left: calc(100% - 200px);
  margin-top: 20px;
  z-index: 20;
  border-radius: 10px;
}

#hideInstruction {
  text-align: center;
  align-content: center;
  padding: 5px 5px;
  position: relative;
  margin: auto;
  z-index: 75;
  border-radius: 10px;
}

#chart {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
	height: 500px;
}


/* Sankey flow */

.node rect {
  fill-opacity: .9;
  shape-rendering: crispEdges;
}

.node text {
  pointer-events: none;
  color: rgb(255, 0, 0);
}

.link {
  fill: none;
  stroke: #000;
  stroke-opacity: .2;
}

.link:hover {
  stroke-opacity: .5;
}

.dot {
  height: 15px;
  width: 15px;
  border-radius: 50%;
  display: inline-block;
	margin-right: 10px;
}

#HB {
	background-color: #3182bd;
}

#MB {
	background-color: #6baed6;
}

#LB {
	background-color: #9ecae1;
}

#VLB {
	background-color: #c6dbef;
}

